--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
     background-color: black;
 }
 canvas {
-    width: 100em;
-    top: 5em;
     position: absolute;
     background-color: black;
     image-rendering: optimizeSpeed;
@@ -17,22 +15,18 @@ canvas {
     image-rendering: -o-crisp-edges;
     image-rendering: pixelated;
     -ms-interpolation-mode: nearest-neighbor;
+    margin-left: auto;
+    margin-right: auto;
 }
-@media screen and (orientation: landscape) {
-    div#square {
-        height: 100vh;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        font-size: 1vh;
-        width: 100vh;
-    }
-}
-@media screen and (orientation: portrait) {
-    canvas {
-        width: 100vw;
-        top: calc(50vh - 45vw);
-        position: absolute;
-        font-size: 1vw;
-    }
+p {
+    font-size: 31px;
+    color: white;
+    padding: 0;
+    font-family: sans-serif;
+    position: absolute;
+    text-align: center;
+    right: 15px;
+    top: -8px;
+    display: block;
+    line-height: 0px;
 }
