--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     overflow: hidden;
     background-color: black;
 }
-canvas {
+#canvas {
     position: absolute;
     background-color: black;
     image-rendering: optimizeSpeed;
@@ -17,6 +17,13 @@ canvas {
     -ms-interpolation-mode: nearest-neighbor;
     margin-left: auto;
     margin-right: auto;
+}
+#background-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 p {
     font-size: 31px;
