--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     overflow: hidden;
     background-color: black;
 }
-#canvas {
+canvas#canvas {
     position: absolute;
     background-color: black;
     image-rendering: optimizeSpeed;
@@ -18,14 +18,14 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-#background-canvas {
+canvas#background-canvas {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-p {
+p#picture-mode-element {
     font-size: 31px;
     color: white;
     padding: 0;
@@ -36,4 +36,5 @@ p {
     top: -8px;
     display: block;
     line-height: 0px;
+    text-shadow: 0px 0px 4px black;
 }
